# rust_bpmn_analyzer

./: .gitattributes  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: bencher.yml  cli.yml  core.yml  release.yml  rust.yml  wasm.yml  webserver.yml
cli/: .gitignore  Cargo.toml
cli/benchmark_input/: 400.bpmn  500.bpmn  p10x01.bpmn  p15x01.bpmn  p17x01.bpmn  p20x01.bpmn
cli/src/: main.rs
cli/src/output/: property_info.rs  state_space_info.rs
cli/tests/: integration_test.rs
core/: Cargo.toml  deny.toml
core/src/: lib.rs
core/src/bpmn/: collaboration.rs  flow_node.rs  mod.rs  process.rs  reader.rs  reader_test.rs  semantics_test.rs
core/src/model_checking/: mod.rs  properties.rs
core/src/model_checking/por/: ample_set.rs  explorer.rs  independence.rs  mod.rs  result.rs
core/src/output/: property_info.rs
core/src/states/: ample_set.rs  mod.rs  state_space.rs
core/tests/: partial_order_reduction.rs  state_space_generation.rs  test_unique_snapshot_ids.rs
core/tests/resources/integration/: livelock.bpmn  p2.bpmn  p6_stuck.bpmn
core/tests/resources/unit/prefix/: wurst-prefix.bpmn
core/tests/resources/unit/properties/option_to_complete/: no-option-to-complete-2.bpmn
core/tests/resources/unit/properties/proper_completion/: no-proper-completion-2.bpmn  no-proper-completion-3-unsafe.bpmn  proper-completion-1.bpmn
core/tests/resources/unit/reader/: events.bpmn  gateways.bpmn  pools-message-flows.bpmn  tasks.bpmn
core/tests/resources/unit/semantics/: end.bpmn  evg.bpmn  nothing.bpmn  receive_task.bpmn  start.bpmn  terminate_end.bpmn
public/: 3rdpartylicenses.txt  app.js  app.js.LICENSE.txt  app.js.map  bt.3abf46351d7644c5.eot  index.html  main.31f0a33d1b7b2e93.js  polyfills.3bb99846a765c93c.js  runtime.a17c946e4c6cc7b6.js  styles.36cb27cda22ffb5a.css
public/css/: app.css  bpmn-js-token-simulation.css
resources/: 003.bpmn  015.bpmn  030.bpmn  050.bpmn  100.bpmn  300.bpmn  task-and-gateways.bpmn
scalability/: README.md  scalability_output.txt
scalability/scripts/: README.md  plot_scalability.py
scalability/v1-results/: scalability_stats.json
scalability/v2-results/: scalability_output.txt  scalability_stats.json
src/: bpmn.rs  lib.rs  main.rs
src/bpmn/: collaboration.rs  flow_node.rs  mod.rs  model_checking.rs  process.rs  reader.rs  reader_test.rs  semantics_test.rs  state_space.rs  test.rs  test_utils.rs
src/dtos/: mod.rs
src/model_checking/: bpmn_properties.rs  mod.rs  properties.rs
src/output/: mod.rs  property_info.rs  state_space_info.rs
src/state_space/: mod.rs  state_space.rs
src/states/: state_space.rs
test/resources/: pg.bpmn
test/resources/no_dead_activities/: dead-activities.bpmn
test/resources/option_to_complete/: no-option-to-complete-1.bpmn
test/resources/proper_completion/: no-proper-completion-1.bpmn  proper-completion-2.bpmn
tests/: state_space_generation.rs  state_space_generation_test.rs
tests/resources/: intermediate_event.bpmn  unsafe.bpmn
tests/resources/integration/: message_receive_prio.bpmn  p10.bpmn  pools-message-flows.bpmn
tests/resources/no_dead_activities/: dead-activities.bpmn
tests/resources/unit/prefix/: bpmn-prefix.bpmn
tests/resources/unit/properties/no_dead_activities/: no-dead-activities.bpmn
tests/resources/unit/reader/: event-subprocesses.bpmn
tests/resources/unit/semantics/: exg.bpmn  link_event.bpmn  message_intermediate_catch_event.bpmn  message_start.bpmn  message_start_event.bpmn  multiple_participants.bpmn  receive_dead.bpmn  receive_task_no_mf.bpmn  send_task.bpmn  task.bpmn  task_and_gateways.bpmn
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/src/dtos/: mod.rs
webserver/: Cargo.toml  Dockerfile
webserver/public/: app.js  bpmn-vendor.css  bpmn-vendor.js  diagram-vendor.js  index.css  index.html  rust_bpmn_analyzer_wasm_bg.wasm  vendor.js
webserver/public/css/font-awesome-5/: fa.eot
webserver/src/: lib.rs  main.rs
webserver/src/dtos/: mod.rs
webserver/tests/: check_bpmn.rs
