[package]
name = "rust_bpmn_analyzer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI dependencies
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
quick-xml = "0.31.0"

# HTTP-Server dependencies
axum = "0.7.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
