[package]
name = "rust_bpmn_analyzer_cli"
version = "2.0.1"
edition = "2024"
rust-version = "1.94"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
rust_bpmn_analyzer = { path = "../core" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"