[package]
name = "rust_bpmn_analyzer_webserver"
version = "2.0.0"
edition = "2024"

[dependencies]
rust_bpmn_analyzer = { path = "../core" }

clap = { version = "4.5.47", features = ["derive"] }
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
