[package]
name = "rust_bpmn_analyzer_webserver"
version = "2.0.0"
edition = "2024"

[dependencies]
rust_bpmn_analyzer = { path = "../core" }

clap = { version = "4.5.60", features = ["derive"] }
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
